# mirakurun-client-rs

./: Cargo.toml  README.md  oapi_generation.sh
.openapi-generator/: FILES
def/: docs.json
docs/: Channel.md  ChannelsApi.md  ConfigApi.md  ConfigChannelsItem.md  ConfigServer.md  ConfigTunersItem.md  Error.md  ErrorOfOpenApi.md  Event.md  EventResource.md  EventType.md  EventsApi.md  IptvApi.md  LogApi.md  MiscApi.md  Program.md  ProgramAudioSamplingRate.md  ProgramAudios.md  ProgramAudiosInner.md  ProgramGenre.md  ProgramSeries.md  ProgramVideo.md  ProgramVideoResolution.md  ProgramVideoType.md  ProgramsApi.md  RelatedItem.md  Service.md  ServicesApi.md  Status.md  StatusApi.md  StatusEpg.md  StatusErrorCount.md  StatusProcess.md  StatusProcessMemoryUsage.md  StatusStreamCount.md  StatusTimerAccuracy.md  StatusTimerAccuracyM1.md  StreamApi.md  TunerDevice.md  TunerProcess.md  (+7 more)
src/: lib.rs
src/apis/: channels_api.rs  config_api.rs  configuration.rs  events_api.rs  iptv_api.rs  log_api.rs  misc_api.rs  mod.rs  programs_api.rs  services_api.rs  status_api.rs  stream_api.rs  tuners_api.rs  version_api.rs
src/models/: channel.rs  channel_type.rs  config_channels_item.rs  config_server.rs  config_tuners_item.rs  error.rs  error_of_open_api.rs  event.rs  event_resource.rs  event_type.rs  mod.rs  program.rs  program_audio_sampling_rate.rs  program_audios.rs  program_audios_inner.rs  program_genre.rs  program_series.rs  program_video.rs  program_video_resolution.rs  program_video_type.rs  related_item.rs  service.rs  status.rs  status_epg.rs  status_error_count.rs  (+12 more)
