[package]
name = "mirakurun_client"
version = "3.9.0-rc.2"
authors = ["Kazuki Kuroda <kazukuro0824+dev@gmail.com>", "OpenAPI Generator team and contributors"]
edition = "2021"
license = "Apache-2.0"
description = "A Rust client library for Mirakurun."

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
reqwest = "~0.9"

chrono = {version = "^0.4", features = ["serde"]}
[dev-dependencies]
